# test-north

./: .cruft.json  404.html  Dockerfile  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml  requirements-jupyter.txt
.github/: pytest.yaml
.github/workflows/: docker-publish-NORTH.yaml  docker-publish-north.yaml  publish-north.yaml  publish.yml  publish_north.yml  pytest.yaml
docker/: Dockerfile.jupyter
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
north_notebook/: Dockerfile  README.md  requirements.in
reference/: references.html
scripts/: get_git_version.sh
search/: search_index.json
src/: north_entry_points.py
src/test_north/: north_entry_points.py
src/test_north/actions/: __init__.py
src/test_north/actions/simple_action/: __init__.py  activities.py  workflows.py
src/test_north/normalizers/: __init__.py  normalizer.py
src/test_north/north_tools/: __init__.py
src/test_north/north_tools/test_jupyter/: Dockerfile  Dockerfile.jupyter  README.md  __init__.py  compile_jupyter_requirements.sh  generate_requirements.sh  requirements-jupyter.txt  requirements.in
src/test_north/north_tools/test_jupyter/examples/: eln_data.yaml  sts_5_described_nxdata.nxs  test.archive.yaml
src/test_north/parsers/: __init__.py  parser.py
src/test_north/schema_packages/: __init__.py  schema_package.py
src/test_north/utils/: utils.py
test-north/: .cruft.json
tests/actions/: test_action.py
tests/apps/: test_app.py
tests/data/north_test/: CommandLineDataconverter1.ipynb  sts_output.nxs
tests/north_tools/: test_north_tools.py
tests/parsers/: test_parser.py
tutorial/: tutorial.html
