[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
fallback_version = "0.0"
[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
name = "test-north"
description = "Nomad example template"
# dyncamic = ["version"]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "John Doe", email = "rubel.mozumder@physik.hu-berlin.de" },
]
maintainers = [
    { name = "John Doe", email = "rubel.mozumder@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
dependencies = [
    "python-magic-bin; sys_platform == 'win32'",
    "nomad-lab@git+https://gitlab.mpcdf.mpg.de/nomad-lab/nomad-FAIR.git@north-tool-entry-point#egg=nomad",
    "pynxtools-spm>=0.2.0",
    "click>=8.0.0",
]

[project.urls]
Repository = "https://github.com/RubelMozumder/test-north"

[project.optional-dependencies]
dev = ["ruff", 
       "pytest", 
       "structlog", 
       "coverage"]

north_dependencies = [
    "h5glance>=0.8",
    "h5grove>=1.1.0",
    "jupyterlab-h5web[full]>=7.1.1",
    "jupyterlab",
    "punx>=0.2.5",
    "ipywidgets",
    "nodejs",
]

[project.scripts]
print_hello = "test_north.utils.utils:hello"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
    "PLC0415", # `import` should be at the top-level of a file
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nomad.plugin']
parser_entry_point = "test_north.parsers:parser_entry_point"
schema_package_entry_point = "test_north.schema_packages:schema_package_entry_point"
normalizer_entry_point = "test_north.normalizers:normalizer_entry_point"
app_entry_point = "test_north.apps:app_entry_point"
example_upload_entry_point = "test_north.example_uploads:example_upload_entry_point"
north_tool = "test_north.north_entry_points:north_tool"
[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
skip = [".github/*"]
